// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextSearch found no search results 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="project-text-search"
>
    <div
        className="header"
    >
        <SearchInput
            count={0}
            handleClose={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Find in files…"
            query="foo"
            showErrorEmoji={true}
            size="big"
            summaryMsg="0 results"
        />
        Object {}
    </div>
    <div
        className="no-result-msg absolute-center"
    >
        No results found
    </div>
</div>,
  "nodes": Array [
    <div
      className="project-text-search"
>
      <div
            className="header"
      >
            <SearchInput
                  count={0}
                  handleClose={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Find in files…"
                  query="foo"
                  showErrorEmoji={true}
                  size="big"
                  summaryMsg="0 results"
            />
            Object {}
      </div>
      <div
            className="no-result-msg absolute-center"
      >
            No results found
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <TextSearch
        closeActiveSearch={[Function]}
        query="foo"
        results={Array []}
        searchBottomBar={Object {}}
        searchSources={[Function]}
        selectSource={[Function]}
        sources={Object {}}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": TextSearch {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "shortcuts": undefined,
        },
        "focusedItem": null,
        "inputFocused": false,
        "inputOnChange": [Function],
        "onEnterPress": [Function],
        "onKeyDown": [Function],
        "props": Object {
          "closeActiveSearch": [Function],
          "query": "foo",
          "results": Array [],
          "searchBottomBar": Object {},
          "searchSources": [Function],
          "selectSource": [Function],
          "sources": Object {},
        },
        "refs": Object {},
        "selectMatchItem": [Function],
        "state": Object {
          "inputValue": "foo",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="project-text-search"
>
          <div
                    className="header"
          >
                    <SearchInput
                              count={0}
                              handleClose={[Function]}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Find in files…"
                              query="foo"
                              showErrorEmoji={true}
                              size="big"
                              summaryMsg="0 results"
                    />
                    Object {}
          </div>
          <div
                    className="no-result-msg absolute-center"
          >
                    No results found
          </div>
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="project-text-search"
>
          <div
                    className="header"
          >
                    <SearchInput
                              count={0}
                              handleClose={[Function]}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Find in files…"
                              query="foo"
                              showErrorEmoji={true}
                              size="big"
                              summaryMsg="0 results"
                    />
                    Object {}
          </div>
          <div
                    className="no-result-msg absolute-center"
          >
                    No results found
          </div>
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <TextSearch
    closeActiveSearch={[Function]}
    query="foo"
    results={Array []}
    searchBottomBar={Object {}}
    searchSources={[Function]}
    selectSource={[Function]}
    sources={Object {}}
/>,
}
`;

exports[`TextSearch found search results 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="project-text-search"
>
    <div
        className="header"
    >
        <SearchInput
            count={5}
            handleClose={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Find in files…"
            query="match"
            showErrorEmoji={true}
            size="big"
            summaryMsg="5 results"
        />
        Object {}
    </div>
    <ManagedTree
        autoExpand={1}
        autoExpandDepth={1}
        getChildren={[Function]}
        getParent={[Function]}
        getPath={[Function]}
        getRoots={[Function]}
        itemHeight={24}
        renderItem={[Function]}
    />
</div>,
  "nodes": Array [
    <div
      className="project-text-search"
>
      <div
            className="header"
      >
            <SearchInput
                  count={5}
                  handleClose={[Function]}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Find in files…"
                  query="match"
                  showErrorEmoji={true}
                  size="big"
                  summaryMsg="5 results"
            />
            Object {}
      </div>
      <ManagedTree
            autoExpand={1}
            autoExpandDepth={1}
            getChildren={[Function]}
            getParent={[Function]}
            getPath={[Function]}
            getRoots={[Function]}
            itemHeight={24}
            renderItem={[Function]}
      />
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <TextSearch
        closeActiveSearch={[Function]}
        query="match"
        results={
                Array [
                        Object {
                          "filepath": "testFilePath1",
                          "matches": Array [
                            "match1",
                            "match2",
                            "match3",
                          ],
                        },
                        Object {
                          "filepath": "testFilePath2",
                          "matches": Array [
                            "match4",
                            "match5",
                          ],
                        },
                      ]
        }
        searchBottomBar={Object {}}
        searchSources={[Function]}
        selectSource={[Function]}
        sources={Object {}}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": TextSearch {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "shortcuts": undefined,
        },
        "focusedItem": null,
        "inputFocused": false,
        "inputOnChange": [Function],
        "onEnterPress": [Function],
        "onKeyDown": [Function],
        "props": Object {
          "closeActiveSearch": [Function],
          "query": "match",
          "results": Array [
            Object {
              "filepath": "testFilePath1",
              "matches": Array [
                "match1",
                "match2",
                "match3",
              ],
            },
            Object {
              "filepath": "testFilePath2",
              "matches": Array [
                "match4",
                "match5",
              ],
            },
          ],
          "searchBottomBar": Object {},
          "searchSources": [Function],
          "selectSource": [Function],
          "sources": Object {},
        },
        "refs": Object {},
        "selectMatchItem": [Function],
        "state": Object {
          "inputValue": "match",
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="project-text-search"
>
          <div
                    className="header"
          >
                    <SearchInput
                              count={5}
                              handleClose={[Function]}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Find in files…"
                              query="match"
                              showErrorEmoji={true}
                              size="big"
                              summaryMsg="5 results"
                    />
                    Object {}
          </div>
          <ManagedTree
                    autoExpand={1}
                    autoExpandDepth={1}
                    getChildren={[Function]}
                    getParent={[Function]}
                    getPath={[Function]}
                    getRoots={[Function]}
                    itemHeight={24}
                    renderItem={[Function]}
          />
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="project-text-search"
>
          <div
                    className="header"
          >
                    <SearchInput
                              count={5}
                              handleClose={[Function]}
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Find in files…"
                              query="match"
                              showErrorEmoji={true}
                              size="big"
                              summaryMsg="5 results"
                    />
                    Object {}
          </div>
          <ManagedTree
                    autoExpand={1}
                    autoExpandDepth={1}
                    getChildren={[Function]}
                    getParent={[Function]}
                    getPath={[Function]}
                    getRoots={[Function]}
                    itemHeight={24}
                    renderItem={[Function]}
          />
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <TextSearch
    closeActiveSearch={[Function]}
    query="match"
    results={
        Array [
            Object {
              "filepath": "testFilePath1",
              "matches": Array [
                "match1",
                "match2",
                "match3",
              ],
            },
            Object {
              "filepath": "testFilePath2",
              "matches": Array [
                "match4",
                "match5",
              ],
            },
          ]
    }
    searchBottomBar={Object {}}
    searchSources={[Function]}
    selectSource={[Function]}
    sources={Object {}}
/>,
}
`;
